Stop portraits being stretched on mobile
- portraits are no longer stretched on mobile (simple oversight on my
  end, I'm not too familiar with flexbox)
- added attribution to two questions previously shown as by "???"
- touched up some grammar in one of my answers

--- a/interview/interview.css
+++ b/interview/interview.css
@@ -14,6 +14,7 @@
 
 .bioLeft img, .bioRight img {
     margin: 0;
+    align-self: center;
 }
 
 .bioLeft p, .bioRight p {
